--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/icons/favicon-16x16.svg">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/icons/favicon-32x32.svg">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#4CAF50">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Vuetify 3</title>
+    <title>RoadVault - Apelgårdens vägsamfällighet</title>
   </head>
   <body>
     <div id="app"></div>
